[gd_scene load_steps=11 format=3 uid="uid://dww0jdafba1va"]

[ext_resource type="PackedScene" uid="uid://d3vdrpej8ip3t" path="res://Assets/Scenes/Object/Sorce/Fragment.tscn" id="1"]
[ext_resource type="Script" uid="uid://dtk356rxs5h1m" path="res://Assets/Scenes/Object/Sorce/Fragments.gd" id="1_fre6b"]
[ext_resource type="Texture2D" uid="uid://cbjq1psi0y4h1" path="res://Assets/Image/Map/MAP.png" id="2_l0t0d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ohedu"]
atlas = ExtResource("2_l0t0d")
region = Rect2(712, 560, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ielpv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohedu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ln0u4"]
atlas = ExtResource("2_l0t0d")
region = Rect2(704, 552, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_o64ni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln0u4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hlm4d"]
atlas = ExtResource("2_l0t0d")
region = Rect2(712, 552, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_epj7e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlm4d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_vm2wg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlm4d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Fragments" type="Node2D"]
texture_filter = 1
position = Vector2(0, -8)
script = ExtResource("1_fre6b")
frames_1 = SubResource("SpriteFrames_ielpv")
frames_2 = SubResource("SpriteFrames_o64ni")
frames_3 = SubResource("SpriteFrames_epj7e")
frames_4 = SubResource("SpriteFrames_vm2wg")

[node name="Fragment" parent="." instance=ExtResource("1")]

[node name="Fragment2" parent="." instance=ExtResource("1")]

[node name="Fragment3" parent="." instance=ExtResource("1")]

[node name="Fragment4" parent="." instance=ExtResource("1")]
